miniextendr-macros/tests/ui/derive_newtype_multi_field.stderr
error: this derive requires a struct with exactly one field
 --> tests/ui/derive_newtype_multi_field.rs:6:8
  |
6 | struct Pair(f64, f64);
  |        ^^^^
